# AnnularCellSimulation

./: AnnularCell.cpp  AnnularCell.h  CMakeLists.txt  GlobalParameters.hpp  Grid.cpp  Grid.h  README.md  Rod.cpp  Rod.h  analysis.hpp  analysisRoutines.cpp  analysisRoutines.h  annularCell.hpp  grid.hpp  main.cpp  montecarloRoutines.cpp  montecarloRoutines.h  parameters.cpp
src/: GlobalParameters.hpp  analysis.cpp  annularCell.cpp  annularCell.hpp  grid.cpp  main.cpp  rod.cpp  rod.hpp
